# Process_Schedule_Algorithm

./: .gitignore  CMakeLists.txt  IMPROVEMENTS.md  Makefile  USAGE.md  context.md  out.txt  sched_debug
ForAIAgent/: SpecificatedProject.md  sourceCodeStructure.md
include/: Algorithms.hpp  Analytics.hpp  ISchedulingAlgorithm.hpp  Parser.hpp  Process.hpp  Resource.hpp  Scheduler.hpp  Visualizer.hpp
report/: main.tex
report/chapters/: appendix.tex  ch1_overview.tex  ch2_theory.tex  ch3_design.tex  ch4_implementation.tex  ch5_results.tex  ch6_conclusion.tex  cover.tex  refs.tex
report/figures/: class_diagram.puml
src/: Algorithms.cpp  Analytics.cpp  ISchedulingAlgorithm.cpp  Parser.cpp  Process.cpp  Resource.cpp  Scheduler.cpp  Visualizer.cpp  main.cpp
test_cases/: input_basic.txt  input_bug2_srtn.txt  input_fcfs.txt  input_rr.txt  input_sjf.txt  input_srtn.txt
